<resources>
    <string name="app_name">V Hospice</string>
    <string name="cancellation">The changes won\'t be saved, do you really want to log out?</string>
    <string name="error">Something went wrong. Try again later.</string>
    <string name="retry_loading">Retry</string>
    <string name="error_saving">Saving failed. Try again later.</string>
    <string name="toast_empty_field">The field cannot be empty.</string>
    <string name="editing">Editing</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="line_divider_description">Divider Line</string>
    <string name="plan_date">Plan date</string>
    <string name="status_open">Open</string>
    <string name="topic">Topic</string>
    <string name="authorization">Authorization</string>
    <string name="empty_claim_list_text">There is nothing here yet…</string>
    <string name="refresh">Refresh</string>
    <string name="news_item_date">Date</string>
    <string name="them">Title</string>
    <string name="executor">Executor</string>
    <string name="time">Time</string>
    <string name="visibility">Visibility</string>
    <string name="medical_staff">medical staff</string>
    <string name="volunteers">volunteers</string>
    <string name="coordinators">coordinators</string>
    <string name="employees_of_the_maintenance_department">employees of the maintenance department</string>
    <string name="managers_of_the_maintenance_department">managers of the maintenance department</string>
    <string name="comment">Comment</string>
    <string name="author">Author</string>
    <string name="created">Created</string>
    <string name="insert_comment">Add comment</string>
    <string name="button_add_comment">button add comment</string>
    <string name="button_close">button close</string>
    <string name="button_change_status">button change status</string>
    <string name="button_settings">button settings</string>
    <string name="button_edit_comment">button edit comment</string>
    <string name="in_progress">In progress</string>
    <string name="executed">Executed</string>
    <string name="cancelled">Cancelled</string>
    <string name="open">Open</string>
    <string name="not_assigned">NOT ASSIGNED</string>
    <string name="our_mission">Our Mission</string>
    <string name="take_to_work">take to work</string>
    <string name="to_execute">To execute</string>
    <string name="throw_off">Throw off</string>
    <string name="news_item_title">Title</string>
    <string name="news_item_description">Description</string>
    <string name="news_item_publish_date">Publication date</string>
    <string name="news_item_category">Category</string>
    <string name="news">News</string>
    <string name="news_item_active">Active</string>
    <string name="news_item_not_active">Not active</string>
    <string name="news_item_publish_time">Time</string>
    <string name="news_item_publication">Publication date</string>
    <string name="news_item_creation">Creation date</string>
    <string name="news_item_author">Author</string>
    <string name="news_item_date_format">DD.MM.YYYY</string>
    <string name="news_control_panel_active">Active</string>
    <string name="news_control_panel_not_active">Not active</string>
    <string name="news_control_panel">Control panel</string>
    <string name="fragment_positive_button" translatable="false">OK</string>
    <string name="empty_news_list">There are no news there.\nIf you create a new news item, it will appear here</string>
    <string name="filter_news">Filter news</string>
    <string name="filter">Filter</string>
    <string name="wrong_news_date_period">Wrong period</string>
    <string name="error_removing">Removing failed. Try again later.</string>
    <string name="empty_fields">Fill empty fields</string>
    <string name="main">Main</string>
    <string name="documents">Documents</string>
    <string name="duty_roster">Duty roster</string>
    <string name="app_tool_bar_subtitle">HOSPIS</string>
    <string name="app_tool_bar_title">First Moscow</string>
    <string name="executor_label">Executor</string>
    <string name="inability_to_edit_claim">The Claim can be edited only in the "Open" status.</string>
    <string name="creating">Creating</string>
    <string name="genitive_comment">Comment</string>
    <string name="all_news">All news</string>
    <string name="all_claims">all claims</string>
    <string name="irrevocable_deletion">Are you sure you want to permanently delete the document? These changes cannot be reversed in the future.</string>
    <string name="splashscreen_image">Splashscreen image</string>
    <string name="app_background_image">app background image</string>
    <string name="filtering">Filtering</string>
    <string name="status_claim_canceled">Canceled</string>
    <string name="main_menu">Main menu</string>
    <string name="filter_claim_list_menu_button">Filter claim list menu button</string>
    <string name="sort_news_list_button">Sort news list button</string>
    <string name="add_news_button">Add news button</string>
    <string name="news_category_image">News category icon</string>
    <string name="news_publish_icon">News publish icon</string>
    <string name="news_delete_button">News delete button</string>
    <string name="news_edit_button">News editing button</string>
    <string name="expand_news_button">Expand news card button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="empty_login_or_password">Login and password cannot be empty</string>
    <string name="log_out">Log out</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="lost_network_connection">There is no internet connection. Check your connection and try again.</string>
    <string name="no_rules_for_news_control_panel">Only the Administrator can manage news</string>
    <string name="version">Version: </string>
    <string name="privacy_policy">Privacy Policy:</string>
    <string name="terms_of_use">Terms of use:</string>
    <string name="about">About</string>
    <string name="privacy_policy_url">https://vhospice.org/#/privacy-policy/</string>
    <string name="terms_of_use_url">https://vhospice.org/#/terms-of-use</string>
    <string name="company_info">© I-Teco, 2022</string>
    <string name="our_mission_title_text">Love is all</string>
</resources>